.config/jp/tools/src/fs/snapshots/modify_file_replace_word@replace_first_line.snap
---
source: ".config/jp/tools/src/fs/modify_file.rs"
---
File modified successfully:

```diff
--- test.txt
+++ test.txt
@@ -1 +1 @@
-hello world
+hello universe
```
