.config/jp/tools/src/fs/snapshots/modify_file_replace_word@replace_subset_across_multiple_lines.snap
---
source: ".config/jp/tools/src/fs/modify_file.rs"
---
File modified successfully:

```diff
--- test.txt
+++ test.txt
@@ -1,2 +1,2 @@
-hello world
-how are you doing?
\ No newline at end of file
+hello universe
+what are you doing?
\ No newline at end of file
```
