.config/jp/tools/src/fs/snapshots/modify_file_replace_word@replace_whole_line_without_newline.snap
---
source: ".config/jp/tools/src/fs/modify_file.rs"
---
File modified successfully:

```diff
--- test.txt
+++ test.txt
@@ -1,2 +1,2 @@
-hello world
+hello there
 hello universe
\ No newline at end of file
```
